<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/attention"
            android:text="@string/attention"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/close"
            android:text="@string/close"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/history"
            android:text="@string/history"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/tempV"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/temp"
            android:text="@string/temp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/humidityV"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/humidity"
            android:text="@string/humidity"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/lightV"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/light"
            android:text="@string/light"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/peopleV"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/people"
            android:text="@string/people"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/fs"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fen"
            android:text="@string/fen"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/pc"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/info"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sendPC"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/sendInfo"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_width="400dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/send"
            android:text="发送"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/green"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:layout_weight="1"
            android:id="@+id/tempListView"
            android:layoutAnimation="@anim/list_anim"
            android:layout_width="wrap_content"
            android:layout_height="500dp">

        </ListView>

        <ListView
            android:layout_weight="1"
            android:id="@+id/peopleListView"
            android:layoutAnimation="@anim/list_anim"
            android:layout_width="wrap_content"
            android:layout_height="500dp">

        </ListView>


    </LinearLayout>

</LinearLayout>